# dsa

./: .gitignore  README.md  pyproject.toml  requirements.txt
labs/: temp.md
labs/lab_01/: lab_01.md
labs/lab_01/example/: 1.1.md  1.3.md  1.4.md  1.7.md  2.md
labs/lab_02/: lab_02.md
labs/lab_03/: lab_03.md
labs/lab_04/: lab_04.md
labs/lab_05/: lab_05.md
labs/lab_06/: lab_06.md
labs/lab_07/: lab_07.md
labs/lab_08/: lab_08.md
labs/lab_09/: lab_09.md
labs/lab_10/: lab_10.md
labvenp/: pyvenv.cfg
labvenv/: pyvenv.cfg
lectures/lecture_01/: lecture_01.md  seminar_01_python.md
lectures/lecture_02/: lecture_02.md
lectures/lecture_03/: lecture_03.md
lectures/lecture_04/: lecture_04.md
lectures/lecture_05/: lecture_05.md
lectures/lecture_06/: lecture_06.md
lectures/lecture_07/: lecture_07.md
lectures/lecture_08/: lecture_08.md
seminars/: jupyter_install_guide.md
