[project]
name = "dsa"
version = "2025.09"
description = "Алгоритмы и структуры данных"
authors = [
    {name = "askras",email = "askrasnikov@gmail.com"}
]
license = {text = "CC BY 4.0"}
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "jsonschema (>=4.25.1,<5.0.0)",
    "jupyterlab (>=4.4.6,<5.0.0)",
    "jupyterlab-rise (>=0.43.1,<0.44.0)",
    "jupytext (>=1.17.3,<2.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "nb-js-diagrammers (>=0.0.9,<0.0.10)",
    "notebook (>=7.4.5,<8.0.0)",
    "sympy (>=1.14.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false


[tool.poetry.group.dev.dependencies]
poetry-exec-plugin = "^1.0.1"
poetry-plugin-export = "^1.9.0,<2.0.0"
poetry-plugin-shell = "^1.0.1"

[tool.jupytext]
formats = "ipynb,md"


[tool.poetry-exec-plugin.commands]
spyder = """
spyder --workdir=./ --window-title bmstu_machinelearning --project ./ --conf-dir ./.config/spyder-py3
"""

freeze = "poetry export --format requirements.txt --output requirements.txt --without-hashes"

jupyter = """
export JUPYTERLAB_SETTINGS_DIR=./.jupyterlab_config/user-settings
export JUPYTERLAB_WORKSPACES_DIR=./.jupyterlab_config/workspaces
python -m jupyter lab --allow-root --NotebookApp.token='' --NotebookApp.password=''
"""
